--- a/gst-WebRenderSrc/CMakeLists.txt
+++ b/gst-WebRenderSrc/CMakeLists.txt
@@ -8,7 +8,7 @@ cmake_minimum_required(VERSION 2.8.12.1)
 
 # Only generate Debug and Release configuration types.
 set(CMAKE_CONFIGURATION_TYPES Release Debug)
-
+cmake_policy(SET CMP0074 OLD)
 # Project name.
 project(gst-WebRenderSrc)
 
