--- a/gst-WebRenderSrc/src/CMakeLists.txt
+++ b/gst-WebRenderSrc/src/CMakeLists.txt
@@ -6,8 +6,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CEF_INCLUDE_PATH})
 include_directories(${CEF_PATH})
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror -Wall ")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -stdlib=libc++ -std=c++11")
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror -Wall ")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -stdlib=libc++ -std=c++11")
 
 # Logical target used to link the libcef library.
 ADD_LOGICAL_TARGET("libcef_lib" "${CEF_LIB_DEBUG}" "${CEF_LIB_RELEASE}")
